--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,7 @@
 [theme]
-primaryColor="#F63366"
-backgroundColor="#FFFFFF"
-secondaryBackgroundColor="#F0F2F6"
-textColor="#262730"
-font="sans serif"
+primaryColor="#ffffff"
+backgroundColor="#0a0a0a"
+secondaryBackgroundColor="#36363b"
+textColor="#ffffff"
+font="serif"
+
