--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,6 @@
 [theme]
-primaryColor="#ffffff"
+primaryColor="#3b3434"
 backgroundColor="#0a0a0a"
 secondaryBackgroundColor="#36363b"
-textColor="#ffffff"
+textColor="#b3a6a6"
 font="serif"
-
